compiler/tests/ar/errors/pure_write_param_ar.salam
// لغة: العربية
// EXPECT: E013
نقي دالة كتابة_قيمة(p : صحيح٦٤*, v : صحيح٦٤) : صحيح٦٤:
    p[0] = v
    أرجع v
نهاية

دالة الرئيسية:
    اطبع(1)
نهاية
